<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_touch_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_me_photograph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/dp_15"
            android:text="@string/photograph_str"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#C9C9CB" />

        <TextView
            android:id="@+id/fragment_me_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/dp_15"
            android:text="@string/from_album"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:visibility="gone"
            android:background="#C9C9CB" />

        <TextView
            android:id="@+id/fragment_me_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/dp_15"
            android:text="@string/cancel_str"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>
</layout>