<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="version"
            type="java.lang.String" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/about_bg"
        tools:context=".activitys.AboutActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_260"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:statusBarScrim="@android:color/transparent"
                app:titleEnabled="false">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/about_head_bg"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{version}"
                    tools:text="@string/version_name"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:drawableTop="@mipmap/ic_launcher"
                    android:drawablePadding="@dimen/dp_8"
                    android:gravity="center" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/activity_about_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                    app:navigationIcon="@drawable/back"
                    app:title="@string/main_about_str"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.ToolbarPopupOverlay" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:behavior_overlapTop="@dimen/dp_40"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    app:cardCornerRadius="@dimen/dp_10"
                    android:elevation="@dimen/dp_5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_30"
                        android:layout_marginBottom="@dimen/dp_30"
                        android:layout_marginStart="@dimen/dp_20"
                        android:textSize="@dimen/sp_16"
                        android:text="@string/information_list" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/about_author"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/activity_about_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_touch_bg"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_margin="@dimen/dp_10"
                    app:cardCornerRadius="@dimen/dp_10"
                    android:elevation="@dimen/dp_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:padding="@dimen/dp_10">

                        <ImageView
                            android:id="@+id/activity_about_sdv"
                            android:layout_width="@dimen/dp_80"
                            android:layout_height="@dimen/dp_80"
                            android:contentDescription="@null"
                            android:src="@mipmap/ic_launcher" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/dp_10"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/dp_2"
                                android:text="Yang Huan"
                                android:textColor="@color/colorContent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/dp_2"
                                android:text="Email:435025168@qq.com"
                                android:textColor="@color/colorContent" />

                            <TextView
                                android:id="@+id/activity_about_link"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/dp_1"
                                android:onClick="onClick"
                                android:singleLine="true"
                                android:ellipsize="middle"
                                android:text="https://github.com/androidyanghuan" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_marginBottom="@dimen/dp_40"
                    android:text="@string/statement_info"
                    android:textColor="@color/colorContent" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>