<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="title"
            type="java.lang.String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/public_action_bar_layout"
            app:title="@{title}"/>

        <ImageView
            android:id="@+id/fragment_me_icon"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_marginTop="@dimen/dp_50"
            android:contentDescription="@null"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:text="YangHuan"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_touch_bg"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_5"
                    android:background="#EEE"/>
                <TextView
                    android:id="@+id/fragment_me_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_vetor_setting"
                    android:drawableEnd="@drawable/ic_vector_more_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/setting_str"
                    android:textColor="@color/colorContent"
                    android:textSize="@dimen/sp_17" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_5"
                    android:background="#EEE"/>

                <TextView
                    android:id="@+id/fragment_me_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_vector_about"
                    android:drawableEnd="@drawable/ic_vector_more_right"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="@string/about_str"
                    android:textColor="@color/colorContent"
                    android:textSize="@dimen/sp_17" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_5"
                    android:background="#EEE"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_100"
                    android:gravity="center"
                    android:text="@string/statement_info"
                    android:textColor="@color/md_grey_500" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</layout>
